--- a/src/components/QuoteDetails/QuoteDetails.module.css
+++ b/src/components/QuoteDetails/QuoteDetails.module.css
@@ -17,3 +17,15 @@
   grid-template-columns: min-content 1fr;
   gap: 1rem;
 }
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.quoteStyles {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
